GRPC Ingress added for Controller

--- a/charts/lighthouse/templates/controller/deployment.yaml
+++ b/charts/lighthouse/templates/controller/deployment.yaml
@@ -38,6 +38,6 @@ spec:
               containerPort: {{ .Values.controller.service.targetPort }}
               protocol: TCP
             - name: grpc
-              containerPort: {{ .Values.controller.grpc.port }}
+              containerPort: {{ .Values.controller.grpc.targetPort }}
               protocol: TCP
 {{- end }}
