--- a/charts/lighthouse/templates/controller/tls-secret.yaml
+++ b/charts/lighthouse/templates/controller/tls-secret.yaml
@@ -23,3 +23,26 @@ data:
   {{- end }}
 {{- end }}
 {{- end }}
+{{- if and (eq .Values.controller.enabled true) (eq .Values.controller.ingressGrpc.enabled true) -}}
+{{- if and (eq .Values.controller.ingressGrpc.tls.enabled true) (and (empty .Values.controller.ingressGrpc.tls.secretName) (empty .Values.global.ingressGrpc.tls.secretName)) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "lighthouse.controller.ingressGrpc.tls.secretName" . }}
+  namespace: {{ include "lighthouse.namespace" . }}
+  labels:
+    {{- include "lighthouse.controller.labels" . | nindent 4 }}
+type: kubernetes.io/tls
+data:
+  {{- if not (empty (include "lighthouse.controller.ingressGrpc.tls.crt" .)) }}
+  tls.crt: {{ include "lighthouse.controller.ingressGrpc.tls.crt" . | b64enc | quote }}
+  {{- end }}
+  {{- if not (empty (include "lighthouse.controller.ingressGrpc.tls.key" .)) }}
+  tls.key: {{ include "lighthouse.controller.ingressGrpc.tls.key" . | b64enc | quote }}
+  {{- end }}
+  {{- if not (empty (include "lighthouse.controller.ingressGrpc.tls.ca" .)) }}
+  ca.crt: {{ include "lighthouse.controller.ingressGrpc.tls.ca" . | b64enc | quote }}
+  {{- end }}
+{{- end }}
+{{- end }}
