--- a/charts/lighthouse/templates/controller/secret.yaml
+++ b/charts/lighthouse/templates/controller/secret.yaml
@@ -14,4 +14,5 @@ data:
   JWT_REFRESH_SECRET: {{ randAlphaNum 15 | toString | b64enc | quote}}
   USER_EMAIL: {{ include "lighthouse.user.email" .  | toString | b64enc | quote}}
   PASSWORD: {{  include "lighthouse.user.password" .  | toString | b64enc | quote}}
+  MONGO_URI: {{ include "lighthouse.db.mongo.uri" . | toString | b64enc | quote }}
 {{- end }}
