--- a/charts/lighthouse/values.yaml
+++ b/charts/lighthouse/values.yaml
@@ -27,9 +27,25 @@ global:
       ca: ""
   kubeVersion: ""
 
+
 db:
   mongo:
     create: false
+    replicaCount: 1
+    image:
+      repository: "mongo"
+      pullPolicy: "IfNotPresent"
+      tag: latest
+    rootUser:
+      username: ""
+      password: ""
+      generatedPassword: ""
+    persistence:
+      size: 1Gi
+      storageClassName: ""
+      annotations: {}
+    port: 27017
+    targetPort: 27017
     uri: ""
     databaseName: ""
 
