--- a/charts/lighthouse/templates/agent/configmap.yaml
+++ b/charts/lighthouse/templates/agent/configmap.yaml
@@ -16,5 +16,5 @@ data:
   RESOURCE_NAMESPACE: {{ include "lighthouse.namespace" . | toString | quote }}
   AUTH_ENABLED: {{ include "auth.enabled" . | toString | quote }}
   RUN_MODE: {{ .Values.global.runMode | toString | quote }}
-  WORKER_GROUP: {{ include "lighthouse.agent.group" . | toString | quote }}
+  WORKER_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | quote }}
 {{- end }}
