--- a/charts/lighthouse/templates/agent/secret.yaml
+++ b/charts/lighthouse/templates/agent/secret.yaml
@@ -1,7 +1,7 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.agent.enabled true) (.Values.auth.token) -}}
+{{- if and (eq .Values.agent.enabled true) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,5 +10,22 @@ metadata:
   labels:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
+  {{- if not (empty (include "lighthouse.controller.ingress.tls.ca" .)) }}
+  TLS_SERVER_CUSTOM_CA: {{ include "lighthouse.controller.ingress.tls.ca" . | b64enc | quote }}
+  {{- else }}
+  TLS_SERVER_CUSTOM_CA: ""
+  {{- end }}
+---
+{{- end }}
+{{- if and (eq .Values.agent.enabled true) (not (empty .Values.auth.token)) -}}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "lighthouse.agent.auth.secret.name" . }}
+  namespace: {{ include "lighthouse.namespace" . }}
+  labels:
+    {{- include "lighthouse.agent.labels" . | nindent 4 }}
+data:
   AUTH_TOKEN: {{ .Values.auth.token | toString | b64enc | quote}}
+  WORKER_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | quote }}
 {{- end }}
