--- a/charts/lighthouse/templates/controller/serviceaccount.yaml
+++ b/charts/lighthouse/templates/controller/serviceaccount.yaml
@@ -1,10 +1,12 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if eq .Values.controller.enabled true -}}
+{{- if (eq (include "lighthouse.controller.enabled" .) "true") -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "lighthouse.controller.serviceAccount.name" . }}
   namespace: {{ include "lighthouse.namespace" . }}
+  labels:
+    {{- include "lighthouse.controller.labels" . | nindent 4 }}
 {{- end }}
