--- a/charts/lighthouse/templates/webapp/tls-secret.yaml
+++ b/charts/lighthouse/templates/webapp/tls-secret.yaml
@@ -1,8 +1,10 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.controller.enabled true) (eq .Values.webapp.ingress.enabled true) -}}
-{{- if and (eq .Values.webapp.ingress.tls.enabled true) (and (empty .Values.webapp.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.webapp.ingress.enabled true) -}}
+{{- if and (eq .Values.server.webapp.ingress.tls.enabled true)
+(and (.Values.server.webapp.ingress.tls.crt) (.Values.global.ingress.tls.key))
+(and (empty .Values.server.webapp.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
 apiVersion: v1
 kind: Secret
 metadata:
