--- a/charts/lighthouse/templates/agent/serviceaccount.yaml
+++ b/charts/lighthouse/templates/agent/serviceaccount.yaml
@@ -7,4 +7,6 @@ kind: ServiceAccount
 metadata:
   name: {{ include "lighthouse.agent.serviceAccount.name" . }}
   namespace: {{ include "lighthouse.namespace" . }}
+  labels:
+    {{- include "lighthouse.agent.labels" . | nindent 4 }}
 {{- end }}
