--- a/charts/lighthouse/templates/controller/clusterrole.yaml
+++ b/charts/lighthouse/templates/controller/clusterrole.yaml
@@ -1,11 +1,13 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if eq .Values.controller.enabled true -}}
+{{- if eq (include "lighthouse.controller.enabled" .) "true" -}}
 apiVersion: {{ include "rbac.apiVersion" . }}
 kind: ClusterRole
 metadata:
   name: {{ include "lighthouse.controller.clusterrole.name" . }}
+  labels:
+    {{- include "lighthouse.controller.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - '*'
