--- a/charts/lighthouse/templates/controller/tls-secret.yaml
+++ b/charts/lighthouse/templates/controller/tls-secret.yaml
@@ -1,8 +1,8 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq .Values.controller.enabled true) (eq .Values.controller.ingress.enabled true) -}}
-{{- if and (eq .Values.controller.ingress.tls.enabled true) (and (empty .Values.controller.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingress.enabled true) -}}
+{{- if and (eq .Values.server.ingress.tls.enabled true) (and (empty .Values.server.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -21,11 +21,14 @@ data:
   {{- if not (empty (include "lighthouse.controller.ingress.tls.ca" .)) }}
   ca.crt: {{ include "lighthouse.controller.ingress.tls.ca" . | b64enc | quote }}
   {{- end }}
-{{- end }}
-{{- end }}
-{{- if and (eq .Values.controller.enabled true) (eq .Values.controller.ingressGrpc.enabled true) -}}
-{{- if and (eq .Values.controller.ingressGrpc.tls.enabled true) (and (empty .Values.controller.ingressGrpc.tls.secretName) (empty .Values.global.ingressGrpc.tls.secretName)) }}
 ---
+{{- end }}
+{{- end }}
+
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingressGrpc.enabled true) -}}
+{{- if and (eq .Values.server.ingressGrpc.tls.enabled true)
+(and (eq .Values.server.ingressGrpc.tls.useIngressTls false) (eq .Values.global.ingressGrpc.tls.useIngressTls false))
+(and (empty .Values.server.ingressGrpc.tls.secretName) (empty .Values.global.ingressGrpc.tls.secretName)) }}
 apiVersion: v1
 kind: Secret
 metadata:
