--- a/charts/lighthouse/values.yaml
+++ b/charts/lighthouse/values.yaml
@@ -5,7 +5,7 @@ global:
     repository: quay.io/klovercloud/krack8
     pullPolicy: IfNotPresent
   ## @param global.resources Set container requests and limits for different resources like CPU or memory
-  ## Example:
+  ## e.g:
   ## resources:
   ##   requests:
   ##     cpu: 2
@@ -17,6 +17,7 @@ global:
   resources: {}
   ingress:
     apiVersion: ""
+    ## @param global.ingress.annotations Set annotations for ingress
     ## e.g:
     ## annotations:
     ##   nginx.ingress.kubernetes.io/rewrite-target: /
@@ -104,7 +105,7 @@ server:
     annotations: {}
     ingressClassName: ""
     hostname: ""
-    path: /
+    path: /api
     pathType: ImplementationSpecific
     tls:
       enabled: false
