Lighthouse agent secret updated

--- a/charts/lighthouse/templates/agent/secret.yaml
+++ b/charts/lighthouse/templates/agent/secret.yaml
@@ -27,5 +27,5 @@ metadata:
     {{- include "lighthouse.agent.labels" . | nindent 4 }}
 data:
   AUTH_TOKEN: {{ .Values.auth.token | toString | b64enc | quote}}
-  WORKER_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | quote }}
+  WORKER_GROUP: {{ include "lighthouse.agent.wrokerGroup" . | toString | b64enc | quote }}
 {{- end }}
