Readme Updated, Input validation checker added

--- a/charts/lighthouse/templates/controller/tls-secret.yaml
+++ b/charts/lighthouse/templates/controller/tls-secret.yaml
@@ -1,8 +1,17 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingress.enabled true) -}}
-{{- if and (eq .Values.server.ingress.tls.enabled true) (and (empty .Values.server.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingress.enabled true) (eq .Values.server.ingress.tls.enabled true) -}}
+{{- if or
+    (and
+      (not (empty .Values.server.ingress.tls.crt))
+      (not (empty .Values.server.ingress.tls.key))
+    )
+    (and
+      (not (empty .Values.global.ingress.tls.crt))
+      (not (empty .Values.global.ingress.tls.key))
+     )
+}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -25,10 +34,17 @@ data:
 {{- end }}
 {{- end }}
 
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingressGrpc.enabled true) -}}
-{{- if and (eq .Values.server.ingressGrpc.tls.enabled true)
-(and (eq .Values.server.ingressGrpc.tls.useIngressTls false) (eq .Values.global.ingressGrpc.tls.useIngressTls false))
-(and (empty .Values.server.ingressGrpc.tls.secretName) (empty .Values.global.ingressGrpc.tls.secretName)) }}
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.ingressGrpc.enabled true) (eq .Values.server.ingressGrpc.tls.enabled true) (eq .Values.server.ingressGrpc.tls.useIngressTls false) -}}
+{{- if or
+    (and
+      (not (empty .Values.server.ingressGrpc.tls.crt))
+      (not (empty .Values.server.ingressGrpc.tls.key))
+    )
+    (and
+      (not (empty .Values.global.ingressGrpc.tls.crt))
+      (not (empty .Values.global.ingressGrpc.tls.key))
+     )
+}}
 apiVersion: v1
 kind: Secret
 metadata:
