--- a/charts/lighthouse/templates/webapp/tls-secret.yaml
+++ b/charts/lighthouse/templates/webapp/tls-secret.yaml
@@ -1,10 +1,17 @@
 {{- /*
   Copyright Krack8, Inc. All Rights Reserved.
 */}}
-{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.webapp.ingress.enabled true) -}}
-{{- if and (eq .Values.server.webapp.ingress.tls.enabled true)
-(and (.Values.server.webapp.ingress.tls.crt) (.Values.global.ingress.tls.key))
-(and (empty .Values.server.webapp.ingress.tls.secretName) (empty .Values.global.ingress.tls.secretName)) }}
+{{- if and (eq (include "lighthouse.controller.enabled" .) "true") (eq .Values.server.webapp.ingress.enabled true) (eq .Values.server.webapp.ingress.tls.enabled true) (eq .Values.server.ingress.createCombinedIngress false)  -}}
+{{- if or
+    (and
+      (not (empty .Values.server.webapp.ingress.tls.crt))
+      (not (empty .Values.server.webapp.ingress.tls.key))
+    )
+    (and
+      (not (empty .Values.global.ingress.tls.crt))
+      (not (empty .Values.global.ingress.tls.key))
+     )
+}}
 apiVersion: v1
 kind: Secret
 metadata:
